# Quad_UWB

./: Dockerfile_nano.cross  Dockerfile_rpi.cross  README.md  entrypoint_Nano.sh  entrypoint_RPi.sh  killall.sh  multi_arch_build.sh  vicon_server.py
Files_On_DWM1001dev/MAIN/ds_twr_init/: ss_init_main.c
Files_On_DWM1001dev/MAIN/ds_twr_init/SES/: ds_twr_init.emSession
Files_On_DWM1001dev/MAIN/ds_twr_init/SES/Output/nrf52832_xxaa/Exe/: ds_twr_init.elf  ds_twr_init.map
Files_On_DWM1001dev/MAIN/ds_twr_init_01/: main.c  ss_init_main.c
Files_On_DWM1001dev/MAIN/ds_twr_init_01/SES/: ds_twr_init.emProject  ds_twr_init.emSession
Files_On_DWM1001dev/MAIN/ds_twr_init_01/SES/Output/nrf52832_xxaa/Exe/: ds_twr_init.elf  ds_twr_init.map
Files_On_DWM1001dev/MAIN/ds_twr_resp/: main.c  ss_resp_main.c
Files_On_DWM1001dev/MAIN/ds_twr_resp/SES/: ds_twr_resp.emSession
Files_On_DWM1001dev/MAIN/ds_twr_resp/SES/Output/nrf52832_xxaa/Exe/: ds_twr_resp.elf  ds_twr_resp.map
Files_On_DWM1001dev/MAIN/ds_twr_resp_01/: ss_resp_main.c
Files_On_DWM1001dev/MAIN/ds_twr_resp_01/SES/: ds_twr_resp.emProject  ds_twr_resp.emSession
Files_On_DWM1001dev/MAIN/ds_twr_resp_01/SES/Output/nrf52832_xxaa/Exe/: ds_twr_resp.elf  ds_twr_resp.map
Files_On_DWM1001dev/MAIN/ds_twr_resp_01/UART/platform/rpi/hal/: hal_spi.c
Files_On_DWM1001dev/nRF5_SDK_14.2.0/components/libraries/fifo/: app_fifo.c
Files_On_DWM1001dev/nRF5_SDK_14.2.0/components/libraries/uart/: UART.c  app_uart_fifo.c  retarget.c
Files_On_Desktop/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Files_On_Desktop/devel/lib/pkgconfig/: coop_con_loc.pc
Files_On_Desktop/devel/share/coop_con_loc/cmake/: coop_con_locConfig.cmake
Files_On_Desktop/src/coop_con_loc/: CMakeLists.txt  package.xml
Files_On_Desktop/src/coop_con_loc/launch/: main.launch
Files_On_Desktop/src/coop_con_loc/src/: Connect2Drone.py  Results_File.txt  Results_File_ABS_VEL.txt  Results_File_DIST_Center.txt  Results_File_Diff_DIST.txt  Results_File_Diff_delta.txt  Results_File_Freq_Pos.txt  Results_File_Freq_Vel.txt  Results_File_delta.txt  absolute_velocity.py  localization.py  localization_main.py  velocitization.py
Files_On_RPi/: Results_Copy_Script.sh  server_UWB_04.py
Files_On_RPi/Archive/: AMFC_01.py  EKF.py  Localization.py  Localization_GD_01.py  Localization_GD_02.py  Localization_GD_03.py  Localization_GD_04.py  Localization_GD_05.py  Localization_GD_06.py  Localization_GD_07.py  Localization_GD_08.py  Localization_GD_09.py  Localization_GD_10.py  Localization_GD_11.py  Localization_GD_12.py  Localization_GD_12_control.py  Localization_GD_12_control_nano.py  Localization_GD_12_nano.py  Localization_GD_13_control.py  Localization_GD_13_control_nano.py  Localization_GD_14_control_RPi.py  Localization_GD_14_control_nano.py  Localization_RL_01.py  PIX_Connection.py  PIX_Connection_01.py  distance_return.py  server_UWB_01.py  server_UWB_02.py  server_UWB_03.py  server_UWB_04.py  uart_RW.py  uart_RW01.py  uart_RW02.py  uart_RW03.py
Files_On_RPi/Archive/design/: EKF01.m  Untitled.m  Untitled01.m  Untitled02.m  Untitled03.m
Files_On_RPi/coop_con_loc_RPi/src/coop_con_loc/: CMakeLists.txt  package.xml
Files_On_RPi/coop_con_loc_RPi/src/coop_con_loc/include/: absolute_velocity_main.h  localization.h  sliding_differentiator.h  velocitization.h
Files_On_RPi/coop_con_loc_RPi/src/coop_con_loc/launch/: coop_01_follower.launch  main_01.launch  main_02.launch  main_05.launch  vicon.launch  vicon_01.launch
Files_On_RPi/coop_con_loc_RPi/src/coop_con_loc/src/: AMFC.py  Connect2Center.py  absolute_velocity.py  absolute_velocity_main.cpp  controller.py  distance.py  distance_collection.py  ekf_dist.cpp  localization.cpp  localization.py  localization_main.cpp  localization_main.py  px4_communication.py  relative_velocity_follower.py  sliding_differentiator.cpp  velocitization.cpp  velocitization.py  vicon_client.py
Files_On_RPi/coop_con_loc_nano/src/coop_con_loc/: CMakeLists.txt
Files_On_RPi/coop_con_loc_nano/src/coop_con_loc/include/: absolute_velocity_main.h  absolute_velocity_main_lower_anchor_01.h  ekf_dist.h  localization_lower_anchor_01.h  localization_main.h  localization_main_lower_anchor_01.h  rover_pos.h  velocitization_lower_anchor_01.h
Files_On_RPi/coop_con_loc_nano/src/coop_con_loc/launch/: AMFC.launch  coop_01_leader.launch  ducky.launch  ducky_01.launch  ducky_02_lqr.launch  ducky_02_pid.launch  ducky_02_pid_Ali.launch  main.launch  main_03.launch  main_04.launch  main_05.launch  main_05_lower_anchor_01.launch  main_05_rover.launch
Files_On_RPi/coop_con_loc_nano/src/coop_con_loc/src/: absolute_velocity.py  absolute_velocity_main.cpp  absolute_velocity_main_lower_anchor_01.cpp  controller.py  controller_AMFC.py  controller_Ali.py  controller_lqr.py  distance.py  distance_collection.py  ekf.py  ekf_dist.py  ekf_dist_jerk.py  localization.cpp  localization_ML.py  localization_lower_anchor_01.cpp  localization_main.cpp  localization_main.py  localization_main_lower_anchor_01.cpp  px4_communication.py  relative_velocity_leader.py  rotation_matrix.py  rover_pos.cpp  velocitization.cpp  velocitization.py  velocitization_lower_anchor_01.cpp  vicon_client.py
Report/: UWB_Test_Results_01.xlsx  main.tex
Report/Pics/: R05June_Acc.eps  R05June_Dist.eps  R05June_Dist_Freq.eps  R05June_EKF2.eps  R05June_Pos.eps  R05June_Pos_Freq.eps  R05June_Vel.eps  R05June_Vel_Freq.eps  UWB_Dist_20May_03.eps  UWB_Pos_20May_03.eps  UWB_Pos_21May_02.eps  UWB_Pos_28May_05.eps  UWB_Vel_28May_05.eps
Report/Pics/Fig_logged/: dist_15.eps  dist_26.eps  dist_37.eps  dist_48.eps  pos_x.eps  pos_y.eps  pos_z.eps  pos_z1.eps
